@@ -69,6 +69,8 @@ xine-lib (1.1.90) (Unreleased)
     colour controls, zooming, colour keying.
 
 xine-lib (1.1.17) 2009-??-??
+  * Fix build with older ffmpeg, both internal and in Debian 5.0.
+  * Add version check for CACA library and disable CACA plugin if needed
 
 xine-lib (1.1.16) 2009-01-07
   * Security fixes:
@@ -76,7 +78,8 @@ xine-lib (1.1.16) 2009-01-07
     - Multiple buffer overflows.                               (CVE-2008-5236)
     - Multiple integer overflows.                              (CVE-2008-5237)
     - Unchecked or incompletely-checked read function results. (CVE-2008-5239)
-    - Unchecked malloc using untrusted values.                 (CVE-2008-5240)
+    - Unchecked malloc using untrusted values.  (CVE-2008-5240, CVE-2008-5242)
+    - Integer underflow in qt compressed atom handling.        (CVE-2008-5241)
     - Buffer indexing using untrusted or unchecked values.     (CVE-2008-5243)
     - Integer overflows in the ffmpeg audio decoder and the CDDA server.
     - Heap buffer overflow in the ffmpeg video decoder.
